# CircuitBreaker

./: .dockerignore  .env.example  .git-merge-dev-to-main.md  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .semgrep.yml  .trivyignore  3-10-26.md  AD_BUGS.md  AGENTS.md  ARCHITECTURE.md  CI_ERRORS.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CODE_REVIEW_SILENT_ERRORS_REPORT.md  CONTRIBUTING.md  CORTEX.md  Caddyfile.dev  DB-Rewrite.md  DEV_PLAYBOOK.md  Dockerfile  Dockerfile.mono  DocsPage.md  GEMINI.md  HOUSEKEEPING.md  KNOWN_BUGS.md  LICENSE  Makefile  PG_LOGS.md  PKGBUILD  PRE_PKG.md  PROD_PATH.md  PROMPT.md  README.md  SECURITY.md  SECURITY_ANALYSIS_2026-07-13.md  SECURITY_AUDIT.md  (+39 more)
apps/backend/: .env.test  README.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements-pg.txt  requirements.txt  test_db_init.py  tox.ini
apps/backend/data/: cve.db-shm  cve.db-wal
apps/backend/db_rewrite_proposal/: 0033_optimize_schema.py  models.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0001_init.py  0002_discovery_engine.py  0003_self_cluster.py  0004_performance_indexes.py  0005_audit_indexes.py  0006_user_management.py  0007_smtp_email.py  0008_local_users.py  0009_vault_encryption.py  0010_pg_settings.py  0011_pg_show_experimental_boolean.py  0012_audit_log_hashes.py  0013_discovery_vlans.py  0014_proxmox_integration.py  0015_proxmox_storage.py  0016_webhook_deliveries_oauth_states.py  0017_webhooks_notifications_oauth.py  0018_auth_provider_fields.py  0019_mfa_fields.py  0020_merge_heads.py  0021_daily_uptime_stats.py  0022_map_title.py  0023_webhook_v1_fields.py  0024_rbac_scopes_demo.py  0025_status_pages.py  0026_pg_jsonb_teams_topologies.py  0027_tag_color.py  0028_api_tokens.py  0029_fix_jsonb_column_defaults.py  0030_proxmox_discover_runs.py  0031_graph_uplink_overrides.py  0032_onboarding_step_state.py  0033_add_certificates.py  0034_security_hardening.py  0035_performance_indexes_v2.py  0036_ipam_vlans_sites.py  0037_node_relations.py  0038_rename_teams_to_tenants.py  0039_audit_triggers.py  0040_rls_policies.py  (+57 more)
apps/backend/scripts/: migrate_sqlite_to_pg.py
apps/backend/src/app/: main.py  start.py
apps/backend/src/data/: app.db-wal  cve.db-shm
apps/backend/tests/: conftest.py  factories.py  test_admin_db.py  test_admin_users.py  test_audit_actor.py  test_audit_actor_extra.py  test_auth.py  test_auth_bootstrap_and_scheduler.py  test_auth_e2e.py  test_auto_merge.py  test_bootstrap_domain.py  test_certificates.py  test_circuit_breaker.py  test_clusters.py  test_compute_units.py  test_cve.py  test_cve_session.py  test_data_dir_defaults.py  test_discovery.py  test_discovery_failloud.py  test_discovery_readiness.py  test_discovery_reconciler.py  test_discovery_status.py  test_environments.py  test_external_nodes.py  test_hardware.py  test_helper_client.py  test_hostname_validation.py  test_inference_service.py  test_integrations.py  test_ip_reservation.py  test_ipam.py  test_job_lock.py  test_kb_model.py  test_layout_service.py  test_log_redaction.py  test_logs.py  test_map_schemas.py  test_migration_bootstrap.py  test_misc.py  (+25 more)
apps/backend/tests/api/: test_kb.py  test_settings_api.py  test_windscribe_api.py
apps/backend/tests/integration/: test_monitor_engine_e2e.py
apps/backend/tests/integrations/: test_native_probe.py  test_uptime_kuma_socket.py  test_uptime_kuma_sync.py
apps/backend/tests/intelligence/: test_analytics.py  test_dependency_graph.py  test_retention.py
apps/backend/tests/services/: test_device_role_service.py  test_discovery_dhcp.py  test_discovery_fingerprint.py  test_discovery_import_service.py  test_discovery_merge.py  test_discovery_opnsense.py  test_discovery_probes.py  test_discovery_role_assign.py  test_discovery_service.py  test_lldp_probe.py  test_monitor_backfill.py  test_monitor_collectors.py  test_monitor_model.py  test_monitor_poll_worker.py  test_monitor_scheduler.py  test_pruner.py  (+13 more)
backend/: .env.example  README.md  coverage.xml  pyproject.toml  requirements.txt
backend/app/: main.py  start.py
backend/app/api/: admin.py  assets.py  auth.py  bootstrap.py  branding.py  catalog.py  categories.py  clusters.py  compute_units.py  discovery.py  docs.py  environments.py  external_nodes.py  graph.py  hardware.py  ip_check.py  logs.py  metrics.py  misc.py  networks.py  rack.py  search.py  security_status.py  services.py  settings.py  storage.py  telemetry.py  timezones.py  ws_discovery.py
backend/app/core/: compat.py  config.py  markdown_render.py  rate_limit.py  scheduler.py  security.py  time.py  ws_manager.py
backend/app/data/: vendor_catalog.json
backend/app/db/: models.py  session.py
backend/app/integrations/: apc_ups.py  dispatcher.py  ilo.py  snmp_generic.py
backend/app/middleware/: logging_middleware.py  security_headers.py
backend/app/schemas/: auth.py  categories.py  clusters.py  compute_units.py  discovery.py  docs.py  environments.py  external_nodes.py  hardware.py  logs.py  misc.py  networks.py  rack.py  services.py  settings.py  storage.py
backend/app/services/: auth_service.py  bulk_suggest.py  catalog_service.py  categories_service.py  clusters_service.py  compute_units_service.py  credential_vault.py  discovery_profiles_service.py  discovery_service.py  docs_service.py  environments_service.py  external_nodes_service.py  graph_service.py  hardware_service.py  ip_reservation.py  log_service.py  misc_service.py  networks_service.py  rack_service.py  services_service.py  settings_service.py  status_service.py  storage_service.py
backend/app/workers/: cleanup.py
backend/data/: app.db-shm  app.db-wal
backend/src/app/: main.py  start.py
backend/src/data/: app.db-shm  app.db-wal  cve.db-wal
backend/tests/: conftest.py  test_audit_log.py  test_auth.py  test_categories.py  test_cortex.py  test_crud_all_entities.py  test_discovery.py  test_environments.py  test_graph_edge_types.py  test_ip_reservation.py  test_oobe_smoke.py  test_phase1_auth.py  test_phase2_audit.py  test_phase2_duckdb.py  test_services.py  test_timestamps.py  test_timezone.py
(+14173 files in other folders)
