[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuit-breaker-backend"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0",
    "Pillow>=10.4.0",
    "slowapi>=0.1.9; python_version < \"4.0\"",
    "markdown-it-py[plugins]>=3.0.0",
    "bleach>=6.0.0",
    "prometheus-client>=0.20.0",
    "pyipmi>=0.4.0",
    "cryptography>=42.0.8",
    "requests>=2.32.3",
    "python-nmap>=0.7.1",
    "pysnmp>=6.1",
    "scapy>=2.5; python_version < \"4.0\"",
    "netaddr>=0.10",
    "apscheduler>=3.10",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
docs = [
    "zensical>=0.0.24",
    "mkdocs-material>=9.7.3",
]

[tool.hatch.version]
# Read version from the canonical VERSION file at the repo root.
# To release a new version: edit /VERSION, then rebuild.
path = "../VERSION"
pattern = "^(?P<version>.+)$"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=./app --cov-report=xml --cov-report=term-missing"
