[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuit-breaker-backend"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0",
    "Pillow>=10.4.0",
    "slowapi>=0.1.9; python_version < \"4.0\"",
    "markdown-it-py[plugins]>=3.0.0",
    "bleach>=6.0.0",
    "prometheus-client>=0.20.0",
    "pyipmi>=0.4.0",
    "cryptography>=42.0.8",
    "requests>=2.32.3",
    "python-nmap>=0.7.1",
    "pysnmp>=6.1",
    "scapy>=2.5; python_version < \"4.0\"",
    "netaddr>=0.10",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "aiosqlite>=0.20.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "nats-py>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "mypy-extensions>=1.0.0",
]
docs = [
    "zensical>=0.0.24",
    "mkdocs-material>=9.7.3",
]

[tool.hatch.version]
# Read version from the canonical VERSION file at the repo root.
# To release a new version: edit /VERSION, then rebuild.
path = "../VERSION"
pattern = "^(?P<version>.+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "I", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
# Start permissive: ignore missing stubs for third-party libraries so mypy
# can be adopted gradually without requiring every dependency to ship py.typed.
ignore_missing_imports = true
# Restore pre-mypy-0.980 behaviour: allow `def f(x: int = None)` patterns.
# Existing API routers use this style; a dedicated cleanup pass can remove
# this flag once signatures are updated to use Optional[int] explicitly.
no_implicit_optional = false
# Warn on unreachable code; skip unused-ignores to avoid false positives
# while the codebase is being gradually annotated.
warn_unreachable = true
warn_unused_ignores = false
# Exclude test fixtures and migration files from strict checks.
exclude = [
    "tests/",
    "migrations/",
]

[[tool.mypy.overrides]]
module = [
    "app.api.compute_units",
    "app.api.discovery",
    "app.main",
]
# Pre-existing type issues in these modules — suppressed until a dedicated
# type-hardening pass is done in a future phase.
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=./src/app --cov-report=xml --cov-report=term-missing"
