[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuit-breaker-backend"
dynamic = ["version"]
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "uptime-kuma-api-v2>=1.0.1",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "PyJWT>=2.12.0,<3.0.0",
    "pyasn1>=0.6.3",
    "bcrypt>=4.0",
    "Pillow>=10.4.0",
    "slowapi>=0.1.9; python_version < \"4.0\"",
    "markdown-it-py[plugins]>=3.0.0",
    "bleach>=6.0.0",
    "prometheus-client>=0.20.0",
    "pyipmi>=0.4.0",
    "cryptography>=42.0.8",
    "requests>=2.32.3",
    "python-nmap>=0.7.1",
    "pysnmp>=6.1",
    "scapy>=2.5; python_version < \"4.0\"",
    "netaddr>=0.10",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "nats-py>=2.9.0",
    "zeroconf>=0.131.0",
    "manuf>=1.1.5",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "aiosmtplib>=3.0",
    "proxmoxer>=2.0.0",
    "urllib3>=2.0.0",
    "psutil>=5.9.0",
    "pyotp>=2.9.0",
    "cachetools>=5.3.0",
    "docker>=7.0.0",
    "redis[hiredis]>=5.0.0",
]

[project.optional-dependencies]
analytics = [
    "duckdb>=1.0.0",
    "duckdb-engine>=0.13.0",
]
otel = [
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
    "httpx>=0.27.0",
    "testcontainers[postgres]>=4.0",
    "factory-boy>=3.3",
    "faker>=26.0",
    "freezegun>=1.5",
    "respx>=0.21",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "mypy-extensions>=1.0.0",
    "types-bleach>=6.0.0",
    "types-requests>=2.32.0",
    "types-cachetools>=5.3.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]
security = [
    "bandit>=1.7.0",
    "semgrep>=1.50.0",
    "pip-audit>=2.7.0",
    "safety>=3.0.0",
]
docs = [
    "zensical>=0.0.24",
    "mkdocs-material>=9.7.3",
]

[tool.hatch.version]
# Read version from the canonical VERSION file at the repo root.
# To release a new version: edit /VERSION, then rebuild.
path = "../../VERSION"
pattern = "^(?P<version>.+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]
ignore = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
python_version = "3.12"
# Start permissive: ignore missing stubs for third-party libraries so mypy
# can be adopted gradually without requiring every dependency to ship py.typed.
ignore_missing_imports = true
# Restore pre-mypy-0.980 behaviour: allow `def f(x: int = None)` patterns.
# Existing API routers use this style; a dedicated cleanup pass can remove
# this flag once signatures are updated to use Optional[int] explicitly.
no_implicit_optional = false
# Warn on unreachable code; skip unused-ignores to avoid false positives
# while the codebase is being gradually annotated.
warn_unreachable = true
warn_unused_ignores = true
# Exclude test fixtures and migration files from strict checks.
exclude = [
    "tests/",
    "migrations/",
]

[[tool.mypy.overrides]]
module = [
    "app.services.discovery_probes",
    "app.services.discovery_service",
]
# python-nmap has no stubs and no py.typed marker. Whether mypy treats
# `import nmap` as Module or Any depends on how it resolves the package,
# which changes with environment and cache state. The type: ignore[assignment]
# on the `nmap = None` fallback is correct when mypy sees a Module type,
# but triggers [unused-ignore] when mypy infers Any. Disabling
# warn_unused_ignores here keeps the ignore stable in both environments.
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "app.api.compute_units",
    "app.api.discovery",
    "app.main",
]
# Pre-existing type issues in these modules — suppressed until a dedicated
# type-hardening pass is done in a future phase.
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
timeout = 30
addopts = [
    "-x",
    "--tb=short",
    "-q",
    "--cov=./src/app",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]
markers = [
    "security: security regression tests (from audit report)",
    "slow: tests that take > 2 seconds",
]

[tool.poetry]
name = "circuit-breaker-backend"
version = "0.2.0"
description = "Circuit Breaker Backend"
authors = ["Admin <admin@example.com>"]
package-mode = false
